--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -1,35 +1,59 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd" id="WebApp_ID" version="2.5">
-  <display-name>joblabxDemo</display-name>
-  
-  <servlet>
-        <servlet-name>UserServlet</servlet-name>
-        <servlet-class>com.kanlon.controller.UserServlet</servlet-class>
-    </servlet>
- 
-    <servlet-mapping>
-        <servlet-name>UserServlet</servlet-name>
-        <url-pattern>/</url-pattern>
-    </servlet-mapping>
-    
-    
-    <servlet>
-        <servlet-name>FileUploadServlet</servlet-name>
-        <servlet-class>com.kanlon.controller.FileUploadServlet</servlet-class>
-    </servlet>
- 
-    <servlet-mapping>
-        <servlet-name>FileUploadServlet</servlet-name>
-        <url-pattern>/uploadfile</url-pattern>
-    </servlet-mapping>
+<web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xmlns="http://java.sun.com/xml/ns/javaee"
+	xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd"
+	id="WebApp_ID" version="2.5">
+	<display-name>joblabxDemo</display-name>
 
-<!--   
-  <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
-  </welcome-file-list> -->
+	<servlet>
+		<servlet-name>UserServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.UserServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>UserServlet</servlet-name>
+		<url-pattern>/test</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
+		<servlet-name>FileUploadServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.FileUploadServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>FileUploadServlet</servlet-name>
+		<url-pattern>/uploadfile</url-pattern>
+	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>DataYearAndSchoolServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.DataYearAndSchoolServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DataYearAndSchoolServlet</servlet-name>
+		<url-pattern>/year_or_school</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>DataYearAndSchoolListServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.DataYearAndSchoolListServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DataYearAndSchoolListServlet</servlet-name>
+		<url-pattern>/year_or_school_list</url-pattern>
+	</servlet-mapping>
+
+
+
+	<welcome-file-list>
+		<welcome-file>index.html</welcome-file>
+		<welcome-file>index.htm</welcome-file>
+		<welcome-file>index.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
+		<welcome-file>default.htm</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+	</welcome-file-list>
 </web-app>
