--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -45,7 +45,26 @@
 		<servlet-name>DataYearAndSchoolListServlet</servlet-name>
 		<url-pattern>/year_or_school_list</url-pattern>
 	</servlet-mapping>
+	
+	<servlet>
+		<servlet-name>AllDataServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.AllDataServlet</servlet-class>
+	</servlet>
 
+	<servlet-mapping>
+		<servlet-name>AllDataServlet</servlet-name>
+		<url-pattern>/all_data</url-pattern>
+	</servlet-mapping>
+   
+   <servlet>
+		<servlet-name>SexNumServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.SexNumServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>SexNumServlet</servlet-name>
+		<url-pattern>/sexnum</url-pattern>
+	</servlet-mapping>
 
 
 	<welcome-file-list>
