--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -25,7 +25,18 @@
 		<servlet-name>FileUploadServlet</servlet-name>
 		<url-pattern>/uploadfile</url-pattern>
 	</servlet-mapping>
-	
+
+	<servlet>
+		<servlet-name>FileUploadTempServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.FileUploadTempExcelServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>FileUploadTempServlet</servlet-name>
+		<url-pattern>/uploadfile_temp</url-pattern>
+	</servlet-mapping>
+
+
 	<servlet>
 		<servlet-name>DataYearAndSchoolServlet</servlet-name>
 		<servlet-class>com.kanlon.controller.DataYearAndSchoolServlet</servlet-class>
@@ -45,7 +56,19 @@
 		<servlet-name>DataYearAndSchoolListServlet</servlet-name>
 		<url-pattern>/year_or_school_list</url-pattern>
 	</servlet-mapping>
-	
+
+	<servlet>
+		<servlet-name>Top5NumSchoolServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.Top5NumSchoolServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>Top5NumSchoolServlet</servlet-name>
+		<url-pattern>/top5_school_list</url-pattern>
+	</servlet-mapping>
+
+
+
 	<servlet>
 		<servlet-name>AllDataServlet</servlet-name>
 		<servlet-class>com.kanlon.controller.AllDataServlet</servlet-class>
@@ -55,8 +78,19 @@
 		<servlet-name>AllDataServlet</servlet-name>
 		<url-pattern>/all_data</url-pattern>
 	</servlet-mapping>
-   
-   <servlet>
+
+	<servlet>
+		<servlet-name>DeleteAllDataServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.DeleteAllDataServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>DeleteAllDataServlet</servlet-name>
+		<url-pattern>/delete_all_data</url-pattern>
+	</servlet-mapping>
+
+
+	<servlet>
 		<servlet-name>SexNumServlet</servlet-name>
 		<servlet-class>com.kanlon.controller.SexNumServlet</servlet-class>
 	</servlet>
