--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -90,6 +90,16 @@
 		<servlet-name>AllDataServlet</servlet-name>
 		<url-pattern>/all_data</url-pattern>
 	</servlet-mapping>
+	
+		<servlet>
+		<servlet-name>AllDataByConditionServlet</servlet-name>
+		<servlet-class>com.kanlon.controller.AllDataByConditionServlet</servlet-class>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>AllDataByConditionServlet</servlet-name>
+		<url-pattern>/all_data_condition</url-pattern>
+	</servlet-mapping>
 
 	<servlet>
 		<servlet-name>DeleteAllDataServlet</servlet-name>
