修改了前端显示的bug，加快了查询的速度，在没有条件是直接进行查询

--- a/WebRoot/WEB-INF/resoure/config.properties
+++ b/WebRoot/WEB-INF/resoure/config.properties
@@ -1,5 +1,5 @@
 #链接MYSQL数据库
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true
+url=jdbc:mysql://101.132.97.103:3306/test?useUnicode=true&characterEncoding=UTF-8&useSSL=false&autoReconnect=true
 username=root
 password=root
